# meta-wearables-dat-ios

./: .gitignore  DAT_SDK_TECHNICAL_ANALYSIS.md  DEPTH_PREDICTION_INTEGRATION.md  MWDAT_SDK_TECHNICAL_ANALYSIS.md  Package.swift  README.md
.claude/: settings.local.json
CameraAccess/CameraAccess/: Info.plist
CameraAccess/CameraAccess.xcodeproj/: project.pbxproj
CameraAccess/MacReceiver/: MacReceiverApp.swift  MacReceiverContentView.swift
MacReceiver/: Package.swift
MacReceiver/MacReceiver/: ContentView.swift  YOLOClient.swift
datasets/usd_cash_counting/: README.md  classes.txt  data.yaml
datasets/usd_cash_counting/scripts/: download_roboflow.py
docs/: CoreML_Conversion_Guide.md  DATA_COLLECTION.md  DAT_SDK_TECHNICAL_ANALYSIS.md  OPEN_SOURCE_STRATEGY.md  POKER_DETECTION.md  README_PRIVATE.md  YOLO_COMPOSABLE_ARCHITECTURE.md  YOLO_INTEGRATION_GUIDE.md
samples/CameraAccess/: .gitignore
samples/CameraAccess/CameraAccess/: CameraAccessApp.swift  Info.plist
samples/CameraAccess/CameraAccess.xcodeproj/: project.pbxproj
samples/CameraAccess/CameraAccess/Models/: DetectedObject.swift  PokerCard.swift  RaceClassification.swift  YOLOModelInfo.swift
samples/CameraAccess/CameraAccess/Race-CLS-FairFace_yolov8n.mlpackage/: Manifest.json
samples/CameraAccess/mobilevit_conversion/: convert_mobilevit.py  pyproject.toml
samples/CameraAccess/scripts/: convert_resnet18_to_coreml.py  pyproject.toml
yolo_base/yolo11n.mlpackage/: Manifest.json
yolo_conversion/: README.md  convert_to_coreml.py  main.py  pyproject.toml
(+86 files in other folders)
